@@ -10,6 +10,7 @@
 	* utils/hichannel.html,
 	utils/hichannel.py,
 	utils/hichannel.yaml: Add new mechanism about YAML.
+	* src/radiosite.h: Create the prototype for RadioSite.
 
 2009-04-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
